syntax = "proto3";

service SystemServer {
    rpc Ping(Empty) returns (Empty) {};
    rpc SendChatMessage(ChatMessage) returns (Empty) {}

    rpc OpenJumpgate(SystemServerInfo) returns (JumpgateInfo) {}
}
message Empty {}

message ChatMessage {
    string author = 1;
    string message = 2;
    uint64 timestamp = 3;
}

message SystemServerInfo {
    string ip = 1;
    uint32 port = 2;
    string name = 3;
}
enum JumpgateStatus {
    Opened = 0;
    Closed = 1;
    Refused = 2;
}

message JumpgateInfo {
    JumpgateStatus status = 1;
    SystemServerInfo info = 2;
}
